system/cms/themes/pyrocms/css/workless/application.css
/* ... */
section#content ul li {
	list-style:none;
	position:relative;
}

#blog-content-tab {
	width:100%;
}

section.title {
	width:100%;
	display:block;
	min-height:25px;
	background:#f7f7f7;
	background-repeat:repeat-x;
	background-image:-khtml-gradient(linear,left top,left bottom,from(#f7f7f7),to(#f3f3f3));
	background-image:-moz-linear-gradient(#f7f7f7,#f3f3f3);
	background-image:-ms-linear-gradient(#f7f7f7,#f3f3f3);
	background-image:-webkit-gradient(linear,left top,left bottom,color-stop(0%,#f7f7f7),color-stop(100%,#f3f3f3));
	background-image:-webkit-linear-gradient(#f7f7f7,#f3f3f3);
	background-image:-o-linear-gradient(#f7f7f7,#f3f3f3);
	background-image:linear-gradient(#f7f7f7,#f3f3f3);
	border-bottom:1px solid #f0f0f0;
	padding:13px 0 8px;
	margin-top:0;
	margin-bottom:0;
	-webkit-border-radius:5px 5px 0 0;
	-moz-border-radius:5px 5px 0 0;
	-ms-border-radius:5px 5px 0 0;
	-o-border-radius:5px 5px 0 0;
	border-radius:5px 5px 0 0;
	-webkit-box-shadow:0 1px 2px 0 rgba(0,0,0,.3);
	-moz-box-shadow:0 1px 2px 0 rgba(0,0,0,.3);
	-ms-box-shadow:0 1px 2px 0 rgba(0,0,0,.3);
	-o-box-shadow:0 1px 2px 0 rgba(0,0,0,.3);
	box-shadow:0 1px 2px 0 rgba(0,0,0,.3);
}

section.title h4 {
	color:#555;
	font-size:16px;
	text-shadow:1px 1px 0 #fff;
	margin:0;
	padding:0 16px;
	text-align:left;
	display:inline;
}

section.title h4 a {
	color:#555;
}

section.item {
	background:#fff;
	float:left;
	width:100%;
	min-height:100px;
	margin:0;
	padding:0;
	-webkit-border-bottom-left-radius:5px;
	-moz-border-bottom-left-radius:5px;
	-o-border-bottom-left-radius:5px;
	border-bottom-left-radius:5px;
	-webkit-border-bottom-right-radius:5px;
	-moz-border-bottom-right-radius:5px;
	-o-border-bottom-right-radius:5px;
	border-bottom-right-radius:5px;
	-webkit-box-shadow:0 1px 2px 0 rgba(0,0,0,.3);
	-moz-box-shadow:0 1px 2px 0 rgba(0,0,0,.3);
	-ms-box-shadow:0 1px 2px 0 rgba(0,0,0,.3);
	-o-box-shadow:0 1px 2px 0 rgba(0,0,0,.3);
	box-shadow:0 1px 2px 0 rgba(0,0,0,.3);
	zoom:1;
}

section.item > .content {
	display:block;
	padding:16px;
	width:100%;
	height:auto;
	-webkit-box-sizing:border-box;
	-moz-box-sizing:border-box;
	box-sizing:border-box;
}

#quick_links ul {
	margin:0;
	padding:0;
}

#quick_links ul li {
	margin:0 10px 0 15px;
	display:inline;
}

#quick_links ul li a {
	font-size:12px;
	text-align:center;
	color:#333;
	filter:alpha(opacity=100);
	-khtml-opacity:1;
	-moz-opacity:1;
	opacity:1;
	-webkit-transition:250ms linear all;
	-moz-transition:250ms linear all;
	transition:250ms linear all;
}

#quick_links ul li a:hover {
	filter:alpha(opacity=100);
	-khtml-opacity:1;
	-moz-opacity:1;
	opacity:1;
}

ul#recent_comments li {
	padding:0 0 40px;
	margin:0 0 15px;
	border-bottom:1px solid #eee;
}

ul#recent_comments li img {
	width:55px;
	height:55px;
	margin:0 10px 0 3px;
	padding:3px;
	border:1px solid #ddd;
	box-shadow:0 1px 1px #ddd;
	float:left;
}

ul#recent_comments li p {
	line-height:20px;
	white-space:nowrap;
	overflow:hidden;
	text-overflow:ellipsis;
}

#feed ul li {
	margin:0 0 25px;
	border-bottom:1px solid #eee;
	width:100%;
}

#feed ul li:last-child {
	border-bottom:none;
}

#feed ul li h4 {
	margin:0 0 8px;
	padding:0;
	line-height:16px;
	font-size:16px;
	display:inline-block;
}

#feed ul li,#feed ul li p {
	color:#333;
	line-height:20px;
}

#feed ul li p {
	margin:0;
	padding:0;
}

#feed ul li p:last-child {
	margin:0;
	padding:0 0 40px;
}

#feed .date {
	float: left;
	position: relative;
	background-color: #6d7a87;
	margin:0 15px 0px 0;
	padding: 5px 5px;
	float:left;
	width: 60px;
	display:inline-block;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	-ms-border-radius: 4px;
	-o-border-radius: 4px;
	border-radius: 4px;
}

#feed .time {
	float: right;
	padding-right: 5px;
	padding-top: 5px;
}

#feed .month {
	display:inline;
	font-size: 12px;
	text-align: right;
	color:white;
	font-weight:700;
}

#feed .day {
	display:inline;
	font-size:16px;
	text-align:right;
	color:white;
	font-weight:700;
}
#feed .post {
	padding-left: 90px;
}

footer {
	background:#333;
	border-top:1px solid #ececec;
	width:100%;
	min-height:60px;
	color:#eee;
	margin-top:-81px;
	padding:0;
	float:right;
	text-shadow:0 -1px 0 #000;
}

footer p {
	float:left;
	font-size:12px;
	margin:5px 0 15px;
	padding:0 10px;
	color:#fff;
}

footer select {
	width:260px!important;
}

ul#lang {
	margin-top:15px;
	margin-right:24px;
	text-align:center;
	text-shadow:0 -1px 0 #fff;
	color:#333;
}

ul#lang .chzn-results {
	width:auto;
	z-index:999;
	position:relative;
}

ul#lang .chzn-drop {
	top:-230px!important;
	-webkit-box-shadow:none;
	-moz-box-shadow:none;
	box-shadow:none;
	border-bottom:1px solid #d0d0d0;
}

ul#lang .chzn-container .chzn-single-with-drop {
	border-top:none;
	-webkit-border-radius:0 0 4px 4px;
	-khtml-border-radius:0 0 4px 4px;
	-moz-border-radius:0 0 4px 4px;
	border-radius:0 0 4px 4px;
	background:#fff;
	background-image:-webkit-gradient(linear,left top,left bottom,color-stop(50%,#fff),color-stop(100%,#eee));
	background:-webkit-linear-gradient(top,#fff 50%,#eee 100%);
	background:-moz-linear-gradient(top,#fff 50%,#eee 100%);
	background:-o-linear-gradient(top,#fff 50%,#eee 100%);
	background:-ms-linear-gradient(top,#fff 50%,#eee 100%);
	background:linear-gradient(top,#fff 50%,#eee 100%);
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff',endColorstr='#eeeeee',GradientType=0);
}

ul#lang .chzn-container .chzn-single div b {
	background:url(../../img/chosen-sprite.png) no-repeat scroll 0 1px transparent;
	background-position:-18px 1px;
}

ul#lang .chzn-container .chzn-single-with-drop div b {
	background:url(../../img/chosen-sprite.png) no-repeat scroll 0 1px transparent;
	background-position:0 0;
}

ul#lang .chzn-container .chzn-drop {
	-webkit-border-radius:4px 4px 0 0;
	-khtml-border-radius:4px 4px 0 0;
	-moz-border-radius:4px 4px 0 0;
	border-radius:4px 4px 0 0;
	border-top:1px solid #aaa;
}

ul#lang .highlighted {
	text-shadow:none;
}
/* ... */

